# loga-corpus

./: CLAUDE.md  pyproject.toml
translator/: build_vocab.py  translate.py
